--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "cra-template": "1.2.0",
     "flatlist-react": "^1.5.14",
     "react": "^19.0.0",
