--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "flatlist-react": "^1.5.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^9.0.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
